# code-lines-counter

./: .gitignore  LICENSE  README.md  pyproject.toml
code-lines-counter/: __main__.py  count.py  utils.py
